| Summary: | ASTERISK-25322: Crash occurs when using MixMonitor with t() or r() options. | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2015-08-13 13:42:17 | Date Closed: | 2015-08-14 07:52:36 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Applications/app_mixmonitor |
| Versions: | 13.0.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace.txt ( 1) gbd.txt | |
| Description: | When executing this AMI command Asterisk crashes.
Action: MixMonitor Channel: SIP/GXP280_16-00000003 Options: v(0) V(0) t(/tmp/test.wav) ActionID: recordall.a You can also replicate this by executing MixMonitor with the r() or t() option in dialplan. Looking at the code I can see why it is blowing up. It will blow up if you specify the t() or r() recording files and the code then tries to get the samples for those files. It won't blow up if you just request the combined file using the AMI File header. Looks like the code was broken when the v13 media changes were made before v13 was released. | ||
| Comments: | |||